表单验证案例

--- a/day_1/src/main/resources/application.properties
+++ b/day_1/src/main/resources/application.properties
@@ -4,3 +4,15 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
+
+
+
+
+#热部署生效
+spring.devtools.restart.enabled=true
+
+#设置重启的目录，添加目录的文件需要restart
+spring.devtools.restart.additional-paths=src/main/java
+
+#排除目录不需要restart
+spring.devtools.restart.exclude=WEB-INF/**,static/**,public/**
