--- a/day_1/src/main/resources/application.properties
+++ b/day_1/src/main/resources/application.properties
@@ -16,3 +16,10 @@ spring.devtools.restart.additional-paths=src/main/java
 
 #排除目录不需要restart
 spring.devtools.restart.exclude=WEB-INF/**,static/**,public/**
+
+#配置ip地址、编码、时区和SSL
+spring.datasource.url=jdbc:mysql://127.0.0.1/wangkai?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
