--- a/day_1/pom.xml
+++ b/day_1/pom.xml
@@ -78,6 +78,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- JPA依赖-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
