--- a/day_1/src/main/resources/application.properties
+++ b/day_1/src/main/resources/application.properties
@@ -27,3 +27,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#RabbitMQ参数
+spring.application.name=rabbitmq-hello
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
