--- a/day_1/src/main/resources/application.properties
+++ b/day_1/src/main/resources/application.properties
@@ -35,3 +35,5 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+#配置es
+spring.data.elasticsearch.repositories.enabled=true
